<resources>

    <string name="app_name">ISport</string>
    <string name="login_title">登陆</string>
    <string name="login_copyright">ISport copyright @小黄蜂</string>
    <string name="login">登陆</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="inputpassword">输入密码</string>
    <string name="reg">没有账号？来注册吧</string>
    <string name="forg">忘记密码？</string>
    <string name="reg_title">注册</string>
    <string name="register_protocal">您已阅读并同意《用户协议》</string>
    <string name="eml">邮箱</string>
    <string name="nickname">昵称</string>
    <string name="activity">活动圈</string>
    <string name="tui_acti">推荐活动</string>
    <string name="re_acti">热门活动</string>
    <string name="joined_acti">我参与的活动</string>
    <string name="acti_sport">运动项目</string>
    <string name="acti_name">活动名称 </string>
     <string name="actidate">活动日期</string>
     <string name="acticont">活动内容</string>
    <string name="begtime">开始时间</string>
    <string name="endtime">结束时间</string>
    <string name="acti_place">运动地点</string>
    <string name="acti_cont">运动内容</string>
    <string name="acti_usercount">参与人数</string>
    <string name="publish_activity">发表活动</string> 
    <string name="cancel_back">取消返回</string>  
    <string name="sport_info">请选择运动类别：</string>  
    <string name="goback">返回</string> 
    <string name="ok">OK</string>
    <string name="popmenu_common">常用</string>
	<string name="popmenu_set">设置</string>
    <string name="jieshao">中国著名男子体操运动员。他创造了世界体操史上的神话，先后摘取十四项世界冠军，赢得一百多枚金牌，1984年洛杉矶奥运会上一举夺得三金两银一铜，是中国单届奥运会上获得奖牌最多的运动员，因此被誉为“体操王子”。1988年退役后，李宁以其姓名命名创立了“李宁”运动品牌</string>

    <!-- 各个省份城市 -->
    <string-array name="hebei">
        <item>石家庄</item>
        <item>张家口</item>
        <item>承德</item>
        <item>秦皇岛</item>
        <item>唐山</item>
        <item>保定</item>
        <item>廊坊</item>
        <item>沧州</item>
        <item>衡水</item>
        <item>邢台</item>
        <item>邯郸</item>
    </string-array>
    <!-- 1 山西 -->
    <string-array name="shanxi">
        <item>太原</item>
        <item>晋城</item>
        <item>大同</item>
        <item>朔州 </item>
        <item>阳泉</item>
        <item>长治</item>
        <item>忻州</item>
        <item>晋中</item>
        <item>临汾</item>
        <item>运城</item>
        <item>晋城</item>
、                <item>吕梁</item>
    </string-array>
    <!-- 2 辽宁 -->
    <string-array name="liaoning">
        <item>沈阳</item>
        <item>大连</item>
        <item>鞍山</item>
        <item>抚顺</item>
        <item>本溪</item>
        <item>丹东</item>
        <item>锦州</item>
        <item>营口</item>
        <item>阜新</item>
        <item>辽阳</item>
        <item>铁岭</item>
        <item>朝阳</item>
        <item>盘锦</item>
        <item>葫芦岛</item>
    </string-array>
    <string-array name="province">
        <item>北京</item>
        <item>天津</item>
        <item>钓鱼岛</item>
        <item>重庆</item>
        <item>上海</item>
        <item>河北</item>
        <item>山西</item>
        <item>辽宁</item>
        <item>吉林</item>
        <item>黑龙江</item>
        <item>江苏</item>
        <item>浙江</item>
        <item>安徽</item>
        <item>福建</item>
        <item>江西</item>
        <item>山东</item>
        <item>河南</item>
        <item>湖北</item>
        <item>湖南</item>
        <item>广东</item>
        <item>海南</item>
        <item>四川</item>
        <item>贵州</item>
        <item>云南</item>
        <item>陕西</item>
        <item>甘肃</item>
        <item>青海</item>
        <item>台湾</item>
        <item>内蒙古</item>
        <item>广西</item>
        <item>西藏</item>
        <item>宁夏</item>
        <item>新疆</item>
        <item>香港</item>
        <item>澳门</item>
        <item>日本</item>
    </string-array>
    <!-- 吉林 -->
    <string-array name="jilin">
        <item>长春市</item>
        <item>九台市</item>
        <item>榆树市</item>
        <item>德惠市</item>
        <item>吉林市</item>
        <item>蛟河市</item>
        <item>桦甸市</item>
        <item>舒兰市</item>
        <item>磐石市</item>
        <item>四平市</item>
        <item>公主岭市</item>
        <item>双辽市</item>
        <item>辽源市</item>
        <item>通化市</item>
        <item>梅河口市</item>
        <item>集安市</item>
        <item>白山市</item>
        <item>临江市</item>
        <item>松原市</item>
        <item>白城市</item>
        <item>洮南市</item>
        <item>大安市</item>
        <item>延吉市</item>
        <item>图们市</item>
        <item>敦化市</item>
        <item>珲春市</item>
        <item>龙井市</item>
        <item>和龙市</item>
    </string-array>
    <!-- 黑龙江 -->
    <string-array name="heilongjiang">
        <item>哈尔滨</item>
        <item>齐齐哈尔</item>
        <item>牡丹江</item>
        <item>佳木斯</item>
        <item>大庆</item>
        <item>鸡西</item>
        <item>双鸭山</item>
        <item>鹤岗</item>
        <item>伊春</item>
        <item>七台河</item>
        <item>黑河</item>
        <item>绥化</item>
        <item>哈兴安岭</item>
    </string-array>
    <string-array name="jiangsu">
        <item>南京市</item>
        <item>无锡</item>
        <item>徐州</item>
        <item>常州</item>
        <item>苏州</item>
        <item>南通</item>
        <item>连云港</item>
        <item>淮安</item>
        <item>盐城</item>
        <item>扬州</item>
        <item>镇江</item>
        <item>泰州</item>
        <item>宿迁</item>
    </string-array>
    <!-- 浙江 -->
    <string-array name="zhejiang">
        <item>杭州</item>
    </string-array>
    <!-- 安徽 -->
    <string-array name="anhui">
        <item>合肥</item>
    </string-array>
    <!-- 福建 -->
    <string-array name="fujian">
        <item>福州</item>
    </string-array>
    <!-- 江西 -->
    <string-array name="jiangxi">
        <item>南昌</item>
    </string-array>
    <!-- 山东 -->
    <string-array name="shandong">
        <item>济南</item>
    </string-array>
    <!-- 河南 -->
    <string-array name="henan">
        <item>郑州</item>
    </string-array>
    <!-- 湖北 -->
    <string-array name="hubei">
        <item>武汉</item>
    </string-array>
    <!-- 湖南 -->
    <string-array name="hunan">
        <item>长沙</item>
    </string-array>
    <!-- 广东 -->
    <string-array name="guangdong">
        <item>广州</item>
    </string-array>
    <!-- 海南 -->
    <string-array name="hainan">
        <item>海口</item>
    </string-array>
    <!-- 四川 -->
    <string-array name="sichuan">
        <item>成都</item>
    </string-array>
    <!-- 贵州 -->
    <string-array name="guizhou">
        <item>贵阳</item>
    </string-array>
    <!-- 云南 -->
    <string-array name="yunnan">
        <item>昆明</item>
    </string-array>
    <!-- 陕西 -->
    <string-array name="sanxi">
        <item>西安</item>
    </string-array>
    <!-- 甘肃 -->
    <string-array name="gansu">
        <item>兰州</item>
    </string-array>
    <!-- 青海 -->
    <string-array name="qinghai">
        <item>西宁</item>
    </string-array>
    <!-- 台湾 -->
    <string-array name="taiwan">
        <item>台北</item>
        <item>台中</item>
        <item>台南</item>
    </string-array>
    <!-- 内蒙古 -->
    <string-array name="neimenggu">
        <item>呼和浩特</item>
    </string-array>
    <!-- 广西 -->
    <string-array name="guangxi">
        <item>南宁</item>
    </string-array>
    <!-- 西藏 -->
    <string-array name="xizang">
        <item>拉萨</item>
    </string-array>
    <!-- 宁夏 -->
    <string-array name="ningxia">
        <item>银川</item>
    </string-array>
    <!-- 新疆 -->
    <string-array name="xinjiang">
        <item>乌鲁木齐</item>
    </string-array>
    <!-- 香港 -->
    <string-array name="xianggang">
        <item>香港</item>
    </string-array>
    <!-- 澳门 -->
    <string-array name="aomen">
        <item>澳门</item>
    </string-array>
    <!-- 北京 -->
    <string-array name="beijing">
        <item>东城区</item>
        <item>西城区</item>
        <item>海淀区</item>
        <item>朝阳区</item>
        <item>丰台区</item>
        <item>石景山区</item>
        <item>通州区</item>
        <item>顺义区</item>
        <item>房山区</item>
        <item>大兴区</item>
        <item>昌平区</item>
        <item>怀柔区</item>
        <item>平谷区</item>
        <item>门头沟区</item>
    </string-array>
    <!-- 天津 -->
    <string-array name="tianjin">
        <item>南开区</item>
        <item>和平区</item>
        <item>河西区</item>
        <item>河东区</item>
        <item>红桥区</item>
        <item>河北区</item>
        <item>西青区</item>
        <item>津南区</item>
        <item>北辰区</item>
        <item>东丽区</item>
    </string-array>
    <!-- 钓鱼岛 -->
<string-array name="diaoyudao">
    <item>钓鱼岛</item>
</string-array>
<!-- 重庆 -->
<string-array name="chongqing">
    <item>重庆</item>
</string-array>
<!-- 上海 -->
<string-array name="shanghai">
    <item>上海</item>
</string-array>
<string-array name="riben">
    <item>东京</item>
    <item>广岛</item>
    <item>长崎</item>
</string-array>
</resources>