<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff" >    
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="14dp"
    android:layout_margin="4dp"
    android:background="@drawable/listitem_main_style" >
    
    <!-- 发帖人介绍 -->
 <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    <!-- 左边头像 --> 
    <!-- 设置用户的头像招聘，使用ImageView组件 -->
    <ImageView 
        android:id="@+id/actiPhoto"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:contentDescription="用户头像"
        android:src="@drawable/user"/>
    <!-- 右边各种信息 -->
    <!-- 姓名和等级 和时间-->
   <TableLayout
     android:layout_width="wrap_content"
     android:layout_height="fill_parent"
     android:collapseColumns="1" 
     android:paddingLeft="5px">
     <TableRow
           android:layout_width="fill_parent"
           android:layout_height="wrap_content" >
                 <LinearLayout 
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent">
                    <TextView
                        android:id="@+id/actiNickName"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="测试用户"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/actiRank"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="left|center_vertical"
                        android:text="v1"
                        android:textSize="14sp" />
                    </LinearLayout>
                </TableRow>
 
   <TableRow 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
       <TextView 
           android:id="@+id/actiPublish"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:text="2012"
           android:textSize="15sp" />
   </TableRow>
   </TableLayout>
    
 </LinearLayout>  
 <!-- 活动介绍 -->
 <TableLayout 
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:collapseColumns="2" 
     android:stretchColumns="1">

     <TableRow
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" >

         <TextView
             android:id="@+id/actiName1"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/acti_name"
             android:textSize="16sp" />
         <TextView
             android:id="@+id/actiName"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center|center_vertical"
             android:layout_weight="1"
             android:text="爱运动"
             android:textSize="16sp" />
           </TableRow>
           
         <TableRow >
         <TextView
             android:id="@+id/actiSport1"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/acti_sport"
             android:textSize="16sp" />
         <TextView
             android:id="@+id/actiSport"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center|center_vertical"
             android:layout_weight="1"
             android:text="羽毛球"
             android:textSize="16sp" />
       </TableRow>
     <TableRow
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" >

         <TextView
             android:id="@+id/actiBegtime1"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/begtime"
             android:textSize="16sp" />
         <TextView
             android:id="@+id/actiBegtime"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center|center_vertical"
             android:layout_weight="1"
             android:text="2014-08-21 10:11:12"
             android:textSize="16sp" />
         </TableRow>
         <TableRow >
         <TextView
             android:id="@+id/actiEndtime1"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/endtime"
             android:textSize="16sp" />
         <TextView
             android:id="@+id/actiEndtime"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center|center_vertical"
             android:layout_weight="1"
             android:text="2014-08-21 10:11:12"
             android:textSize="16sp" />
         
     </TableRow>
     <TableRow
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" >

         <TextView
             android:id="@+id/actiPlace1"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/acti_place"
             android:textSize="16sp" />
         <TextView
             android:id="@+id/actiPlace"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center|center_vertical"
             android:layout_weight="1"
             android:text="南开大学"
             android:textSize="16sp" />
           </TableRow>
 </TableLayout>     
 <!--活动 内容 -->  
<TextView
       android:id="@+id/actiCont"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:paddingTop="8dp"
       android:text="这是我测试的消息……" 
       android:textSize="18sp"/>
<!-- 已参与人数 -->
<!--  
 <TableLayout
     android:layout_width="wrap_content"
     android:layout_height="fill_parent"
     android:collapseColumns="1"
     android:paddingLeft="5px" >

     <TableRow
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" 
         android:paddingTop="8px">
         <TextView
             android:id="@+id/actiUsercount1"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/acti_usercount"
             android:textSize="16sp" />
         <TextView
             android:id="@+id/actiUsercount"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="left|center_vertical"
             android:layout_weight="1"
             android:text="12"
             android:textSize="16sp" />
     </TableRow>
 </TableLayout>
-->
<!-- 用户点击 -->
<TableLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="15px"
    android:collapseColumns="3">
     <TableRow>

                <TextView
                    android:id="@+id/actiUsercount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/acti_usercount"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/actiZan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_vertical"
                    android:layout_weight="1"
                    android:textSize="15sp"
                    android:text="点赞" 
                    android:background="@drawable/btn"
                    android:textColor="#ffffff"/>

                <Button
                    android:id="@+id/actiJoin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:textSize="15sp"
                    android:text="同意参加" 
                    android:background="@drawable/btn"
                    android:textColor="#ffffff"/>
            </TableRow>

</TableLayout>
</LinearLayout>
</LinearLayout>